Delete wildcards, delete sorting, extract private vsibility, short toList(), commented integrational test